Fix the broken !ENABLE(STREAM_API) build https://bugs.webkit.org/show_bug.cgi?id=149525

Reviewed by Darin Adler.

Removed some #ifdef ENABLE(STREAMS_API) to make build work when STREAMS_API is off.
This is a temporary fix.

* bindings/js/WebCoreJSClientData.h:
(WebCore::WebCoreJSClientData::WebCoreJSClientData):
(WebCore::initNormalWorldClientData):


Canonical link: https://commits.webkit.org/167667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190248 268f45cc-cd09-0410-ab3c-d52691b4dbfc